--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>local.dev.fxchatclient/local.dev.fxchatclient.HelloApplication</mainClass>
+                            <mainClass>local.dev.fxchatclient/local.dev.fxchatclient.ChatApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
